Finally fix the alignment for the username and before login

--- a/userAccount/static/css/saved_property.css
+++ b/userAccount/static/css/saved_property.css
@@ -108,12 +108,9 @@ body {
   text-transform: uppercase;
   position: absolute;
   right: 20px;
-  top: 85px;
+  top: 74px;
 }
 
-.account:hover {
-  background-color: #f0f0f5;
-}
 .navbar {
   display: flex;
   justify-content: space-between;  /* or center, or flex-start */
@@ -138,30 +135,30 @@ body {
   font-weight: 600;
   text-transform: uppercase;
   padding: 10px 10px 10px 10px;
+
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: white;
-  min-width: 120px;
-  box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
   z-index: 1;
-  right: 0;
 }
 
 .dropdown-content a {
-  color: black;
-  padding: 10px 14px;
-  text-decoration: none;
+  padding: 10px 16px;
   display: block;
+  text-decoration: none;
+  color: black;
 }
 
 .dropdown-content a:hover {
-  background-color: #f0f0f0;
+  background-color: #f1f1f1;
 }
 
-.dropdown:hover .dropdown-content {
+.dropdown-content.show {
   display: block;
 }
 
@@ -174,7 +171,7 @@ body {
   font-weight: 600;
   text-transform: uppercase;
   position: absolute;
-  right: 300px;
+  right: 330px;
   top: 85px;
   padding: 10px 10px 10px 10px;
   cursor: pointer;
@@ -209,4 +206,21 @@ body {
   font-family: "Inter-Medium", sans-serif;
   font-weight: 500;
 }
+.bookinglist {
+  color: #393280;
+  text-align: left;
+  font-family: "Inter-SemiBold", sans-serif;
+  font-size: 14px;
+  letter-spacing: 0.12em;
+  font-weight: 600;
+  text-transform: uppercase;
+  position: absolute;
+  right: 170px;
+  top: 85px;
+  padding: 10px 10px 30px 10px;
+  cursor: pointer;
+}
 
+.bookinglist:hover {
+  background-color: #f0f0f5;
+}
